k8s/accounts-db.yml
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
spec:
  type: ClusterIP
  selector:
    app: accounts-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
  template:
    metadata:
      labels:
        app: accounts-db
    spec:
      containers:
        - name: accounts-db
          image: postgres:12.10
          livenessProbe:
            tcpSocket:
              port: 5432
          ports:
            - containerPort: 5432
              name: accounts-db
          volumeMounts:
            - name: accounts-db-database-storage
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: accounts-db-database-storage
          persistentVolumeClaim:
            claimName: accounts-db-pv-claim
