k8s/tester.yml

apiVersion: v1
kind: Service
metadata:
  name: tester
spec:
  type: ClusterIP
  selector:
    component: tester
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tester
spec:
  replicas: 1
  selector:
    matchLabels:
      component: tester
  template:
    metadata:
      labels:
        component: tester
    spec:
      containers:
        - name: tester
          image: bergerapi/simple-microservice-tester
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
