k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: "/api/auth/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3000
          - path: "/api/tester/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: tester
                port:
                  number: 3000
